build.log
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_HANS_FREEZE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_STORAGE_TOOL
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MMC_DRIVER
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_UFS_DRIVER
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_UFS_SHOW_LATENCY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_AOD
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_DC
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_ENABLE_MODEM_DB
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_ENGINEERTOOLS
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_FACERECOGNITION
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_FASTBOOT_UNLOCK_VERIFY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_FG_IO_OPT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SDCARD_INFO
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_FINGERPRINT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_HEALTHINFO
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_TASK_CPUSTATS
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MIPICLKCHANGE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MULTI_FREEAREA
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MULTI_KSWAPD
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_NFC_CONSOFT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_ONSCREENFINGERPRINT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_OSC
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_PHOENIX
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_AGINGTEST
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_PROCESS_RECLAIM
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_RESET_ROLLBACK_INDEX
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SELINUX_CONTROL_LOG
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SENSOR
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SENSOR_ALGORITHM
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SENSOR_SMEM
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SENSOR_WISELIGHT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_IOMONITOR
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SPEAKER_MUTE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MM_FEEDBACK
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_TP_BSPFWUPDATE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_TP_BASIC
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_CHG_BASIC
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SCHED_ASSIST
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SIGKILL_DIAGNOSIS
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_VIRTUAL_RESERVE_MEMORY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MEMLEAK_DETECT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_WIFI_MTUDETECT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_WIFI_RUSUPGRADE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_WIFI_SLA
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_DATA_EVAL
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_ZRAM_OPT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_EXFAT_SUPPORT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SDCARDFS_SUPPORT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_PERFORMANCE
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_BUG_COMPATIBILITY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_BUG_STABILITY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_BUG_DEBUG
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_ARCH_INJECT
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_ARCH_EXTENDS
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_LOWMEM_DBG
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_BUG_STABILITY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_POWERINFO_STANDBY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_CAMERA_COMMON
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_MTK_ION_SEPARATE_LOCK
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_THEIA
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_APP_MONITOR
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_SCHEDUTIL_USE_TL
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_HEALTHINFO
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_DISPLAY
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_KMSG_WB
OplusKernelEnvConfig.mk:111: myfeature is OPLUS_FEATURE_DATA_MODULE
drivers/tee/gud/Makefile.include:2: "CONFIG_MTK_PLATFORM: "mt6768""
drivers/tee/gud/Makefile.include:3: "CONFIG_TRUSTONIC_TEE_VERSION: "500""
$GED: CONFIG_MTK_PLATFORM is ["mt6768"]
*MTK_GPU_VERSION 2 = valhall
*MTK_GPU_VERSION 3 = r32p1
mali MTK evironment, building r32p1 DDK
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY := y
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY_NAME := "mt6768"
mali MTK evironment, building r32p1 DDK
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY := y
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY_NAME := "mt6768"
mali MTK evironment, building r32p1 DDK
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY := y
mtk-Kbuild CONFIG_MALI_PLATFORM_THIRDPARTY_NAME := "mt6768"
drivers/misc/mediatek/base/power/cpufreq_v1/src/Makefile:89: "use CONFIG_MTK_TINYSYS_SSPM_V1"
.
FDVT: Drv use 4.0 folder
drivers/misc/mediatek/ccu/src/Makefile:33: CCU_MAKE_FILE_CALLED
.
drivers/misc/mediatek/ccu/src/1.2/Makefile:28: CCU_INC=./drivers/misc/mediatek/ccu/src/mt6768/ccu_ext_interface
ION:enable mtk ion
.
drivers/tee/gud/Makefile.include:2: "CONFIG_MTK_PLATFORM: "mt6768""
drivers/tee/gud/Makefile.include:3: "CONFIG_TRUSTONIC_TEE_VERSION: "500""
drivers/misc/mediatek/base/power/ppm_v3/src/Makefile:110: USE_PPM_CPI
drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.c:351:10: error: implicit declaration of function 'spm_read' [-Werror,-Wimplicit-function-declaration]
                return spm_read(PWR_STATUS);
                       ^
drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.c:351:19: error: use of undeclared identifier 'PWR_STATUS'; did you mean 'NR_STATS'?
                return spm_read(PWR_STATUS);
                                ^~~~~~~~~~
                                NR_STATS
./include/linux/kernel_stat.h:31:2: note: 'NR_STATS' declared here
        NR_STATS,
        ^
drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.c:353:19: error: use of undeclared identifier 'MD1_PWR_CON'
                return spm_read(MD1_PWR_CON);
                                ^
drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.c:355:19: error: use of undeclared identifier 'PCM_REG13_DATA'
                return spm_read(PCM_REG13_DATA);
                                ^
drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.c:357:19: error: use of undeclared identifier 'SPARE_ACK_MASK'; did you mean 'SPM_SPARE_ACK_MASK'?
                return spm_read(SPARE_ACK_MASK);
                                ^~~~~~~~~~~~~~
                                SPM_SPARE_ACK_MASK
./drivers/misc/mediatek/base/power/include/spm_v1/mtk_spm.h:33:2: note: 'SPM_SPARE_ACK_MASK' declared here
        SPM_SPARE_ACK_MASK,
        ^
5 errors generated.
make[7]: *** [scripts/Makefile.build:333: drivers/misc/mediatek/base/power/spm/mt6768/mtk_spm.o] Error 1
make[6]: *** [scripts/Makefile.build:637: drivers/misc/mediatek/base/power/spm/mt6768] Error 2
make[6]: *** Waiting for unfinished jobs....
drivers/misc/mediatek/base/power/upower_v2/Makefile:33: extraneous text after 'ifeq' directive
drivers/misc/mediatek/base/power/spm/common_v1/mtk_idle_select.c:120:43: error: too few arguments provided to function-like macro invocation
        __profile_idle_start(PIDX_SELECT_TO_ENTER);
                                                 ^
./drivers/misc/mediatek/base/power/spm/common/mtk_idle_internal.h:198:9: note: macro '__profile_idle_start' defined here
#define __profile_idle_start(idle_type, idx) \
        ^
drivers/misc/mediatek/base/power/spm/common_v1/mtk_idle_select.c:120:2: error: use of undeclared identifier '__profile_idle_start'
        __profile_idle_start(PIDX_SELECT_TO_ENTER);
        ^
2 errors generated.
make[7]: *** [scripts/Makefile.build:333: drivers/misc/mediatek/base/power/spm/common_v1/mtk_idle_select.o] Error 1
make[7]: *** Waiting for unfinished jobs....
make[6]: *** [scripts/Makefile.build:637: drivers/misc/mediatek/base/power/spm/common_v1] Error 2
make[5]: *** [scripts/Makefile.build:637: drivers/misc/mediatek/base/power/spm] Error 2
make[5]: *** Waiting for unfinished jobs....
make[4]: *** [scripts/Makefile.build:637: drivers/misc/mediatek/base/power] Error 2
make[3]: *** [scripts/Makefile.build:637: drivers/misc/mediatek/base] Error 2
make[3]: *** Waiting for unfinished jobs....
make[2]: *** [scripts/Makefile.build:637: drivers/misc/mediatek] Error 2
make[1]: *** [scripts/Makefile.build:637: drivers/misc] Error 2
make: *** [Makefile:1212: drivers] Error 2
